# Canary

./: .gitignore  .gitmodules  MainActivity.java  README  SettingsFragment.java  activity_main.xml  settings_fragment.xml
android/Canary/: README.md  build.gradle  settings.gradle
android/Canary/app/: build.gradle
android/Canary/app/src/main/: AndroidManifest.xml
android/Canary/app/src/main/cpp/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  NativeBridge.cpp  NativeBridge.h  SpotifyHandler.cpp  SpotifyHandler.h  hello-libs.cpp  main.cpp
android/Canary/distribution/arm64-v8a/include/openssl/: opensslconf.h
android/Canary/distribution/armeabi-v7a/include/openssl/: opensslconf.h
android/Canary/distribution/armeabi/include/openssl/: opensslconf.h
android/Canary/distribution/x86/include/openssl/: opensslconf.h
android/Canary/distribution/x86_64/include/openssl/: opensslconf.h
android/Canary/gen-libs/: build.gradle  proguard-rules.pro
android/Canary/gen-libs/src/main/: AndroidManifest.xml
android/Canary/gen-libs/src/main/cpp/: CMakeLists.txt
android/Canary/gen-libs/src/main/cpp/spotify-api-plusplus/: CMakeLists.txt
android/Canary/gen-libs/src/main/cpp/spotify-api-plusplus/gtest/: googletest-distribution.cbp
android/Canary/gen-libs/src/main/cpp/spotify-api-plusplus/gtest/googlemock/: gmock.cbp
android/Canary/gen-libs/src/main/cpp/spotify-api-plusplus/gtest/googlemock/gtest/: gtest.cbp
android/Canary/gen-libs/src/main/cpp/spotify-api-plusplus/src/: CMakeLists.txt
android/Canary/gradle/wrapper/: gradle-wrapper.properties
android/Canary/models/: assets.xml  build.gradle
android/Canary/models/src/main/: AndroidManifest.xml
android/MyApplication/app/: build.gradle  proguard-rules.pro
android/MyApplication/app/src/main/: AndroidManifest.xml
android/MyApplication/gradle/wrapper/: gradle-wrapper.properties
cpp/: CommandParser.cpp  CommandParser.h  SpotifyHandler.cpp  SpotifyHandler.h
gen-libs/: README.md  android_shared.sh  build-curl4android.sh  build-curl4ios.sh  build-openssl4android.sh  build-openssl4ios.sh  build-spotify-api-plusplus4android.sh  ios_shared.sh
gen-libs/curl-7.56.0/: config.status  curl-config  libcurl.pc  libtool
gen-libs/curl-7.56.0/lib/: curl_config.h
gen-libs/curl-7.56.0/lib/.deps/: curl-nonblock.Po  curl-strtoofft.Po  curl-warnless.Po  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_des.Plo  libcurl_la-curl_endian.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_rtmp.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-curl_sspi.Plo  libcurl_la-curl_threads.Plo  libcurl_la-dict.Plo  libcurl_la-dotdot.Plo  libcurl_la-easy.Plo  libcurl_la-escape.Plo  libcurl_la-file.Plo  libcurl_la-fileinfo.Plo  libcurl_la-formdata.Plo  libcurl_la-ftp.Plo  libcurl_la-ftplistparser.Plo  libcurl_la-getenv.Plo  libcurl_la-getinfo.Plo  libcurl_la-gopher.Plo  libcurl_la-hash.Plo  libcurl_la-hmac.Plo  libcurl_la-hostasyn.Plo  (+65 more)
gen-libs/curl-7.56.0/lib/vauth/.deps/: libcurl_la-cleartext.Plo  libcurl_la-cram.Plo  libcurl_la-digest.Plo  libcurl_la-digest_sspi.Plo  libcurl_la-krb5_gssapi.Plo  libcurl_la-krb5_sspi.Plo  libcurl_la-ntlm.Plo  libcurl_la-ntlm_sspi.Plo  libcurl_la-oauth2.Plo  libcurl_la-spnego_gssapi.Plo  libcurl_la-spnego_sspi.Plo  libcurl_la-vauth.Plo
gen-libs/curl-7.56.0/lib/vtls/.deps/: libcurl_la-axtls.Plo  libcurl_la-cyassl.Plo  libcurl_la-darwinssl.Plo  libcurl_la-gskit.Plo  libcurl_la-gtls.Plo  libcurl_la-mbedtls.Plo  libcurl_la-nss.Plo  libcurl_la-openssl.Plo  libcurl_la-polarssl.Plo  libcurl_la-polarssl_threadlock.Plo  libcurl_la-schannel.Plo  libcurl_la-vtls.Plo
gen-libs/curl-7.56.0/src/: curl
gen-libs/curl-7.56.0/src/.deps/: curl-slist_wc.Po  curl-tool_binmode.Po  curl-tool_bname.Po  curl-tool_cb_dbg.Po  curl-tool_cb_hdr.Po  curl-tool_cb_prg.Po  curl-tool_cb_rea.Po  curl-tool_cb_see.Po  curl-tool_cb_wrt.Po  curl-tool_cfgable.Po  curl-tool_convert.Po  curl-tool_dirhie.Po  curl-tool_doswin.Po  curl-tool_easysrc.Po  curl-tool_formparse.Po  curl-tool_getparam.Po  curl-tool_getpass.Po  curl-tool_help.Po  curl-tool_helpers.Po  curl-tool_homedir.Po  curl-tool_hugehelp.Po  curl-tool_libinfo.Po  curl-tool_main.Po  curl-tool_metalink.Po  curl-tool_msgs.Po  curl-tool_operate.Po  curl-tool_operhlp.Po  curl-tool_panykey.Po  curl-tool_paramhlp.Po  curl-tool_parsecfg.Po  curl-tool_setopt.Po  curl-tool_sleep.Po  curl-tool_strdup.Po  curl-tool_urlglob.Po  curl-tool_util.Po  curl-tool_vms.Po  curl-tool_writeout.Po  curl-tool_xattr.Po
gen-libs/curl-7.56.0/tests/: configurehelp.pm
iOS/Canary/Canary/: AppDelegate.swift  Canary-Bridging-Header.h  CommandParser-Wrapper.h  CommandParser-Wrapper.mm  Hello-Wrapper.h  Hello-Wrapper.m  Hello-Wrapper.mm  Info.plist  LoginViewController.swift  NativeBridge.cpp  NativeBridge.h  NativeBridge.mm  NativeBridgeObjC.h  NativeBridgeObjC.mm  NativeFunctions.swift  ViewController.swift  WebViewController.swift  hello.cpp  hello.hpp
iOS/Canary/Canary.xcodeproj/: project.pbxproj
iOS/Canary/Canary.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/Canary/Canary.xcodeproj/project.xcworkspace/xcuserdata/Turtle.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/Canary/Canary.xcodeproj/xcuserdata/Turtle.xcuserdatad/xcschemes/: Canary.xcscheme  xcschememanagement.plist
iOS/Canary/Canary/Base.lproj/: Main.storyboard
iOS/Canary/Canary/include/curl/: curlbuild.h
iOS/Canary/Canary/include/spotify-api-plusplus/models/: Album.h  AlbumSimple.h  Artist.h  ArtistSimple.h  AudioFeatures.h  Category.h  Copyright.h  Cursor.h  CursorPager.h  Error.h  Followers.h  Image.h  Pager.h  Playlist.h  (+11 more)
iOS/Canary/Canary/include/utils/: CurlUtils.h
iOS/Canary/CanaryTests/: CanaryTests.swift
iOS/Canary/CanaryUITests/: CanaryUITests.swift
(+18 files in other folders)
